[gd_scene load_steps=2 format=3 uid="uid://cnuyyn81u2s70"]

[ext_resource type="Script" uid="uid://dnplj8itvk3ag" path="res://scripts/DialogueUI.gd" id="1_obd5m"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_obd5m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="CharacterNameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DialogueTextLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NextButton" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
